# realtime

./: .gitignore  CMakeLists.txt  compare.py  main.c  main.py  new_times_4g.txt  plot.py  python_client.py  realtime.h  scheduler.c  scheduler.h  scheduling.txt  scheduling_1drop.txt  scheduling_2drop.txt  scheduling_2g.txt  scheduling_3g.txt  scheduling_4g.txt  thread.c  thread.py  times_4g.txt
C/: realtime.h  scheduler.c  scheduler.h
C/benchmarks/: main_benchmark.c
C/function_types/: function_types.h
C/inc/: conf.h  thread.h
C/performance_counter/: performance_counter.c  performance_counter.h
C/power/: power.c  power.h
C/serdes/: serdes.c  serdes.h
C/server/: server.c  server.h
C/shared_memory/: shared_memory.c  shared_memory.h
C/src/: main.c  thread.c
C/tasks/: benchmark_tasks.h  tasks.c  tasks.h
C/temperature/: tempertature.c  tempertature.h
C/threads/: init.c  init.h  manager.c  manager.h  realtime_t.c  realtime_t.h  temperature.c  temperature.h  tick.c  tick.h
C/utils/: utils.c  utils.h
Data/single_thread_task_times_temp/: task_times_1000Mhz.txt  task_times_1500Mhz.txt  task_times_2000Mhz.txt  task_times_800Mhz.txt  (+5 more)
TaskPerformance/: task_performance.c  task_performance.h
Test/: perf_count.c  perf_count.h  task_times.c  task_times.h
benchmarks/: main_benchmark.c  perf_monitor.c  perf_monitor.h  times_1g.txt  times_2g.txt  times_3g.txt  times_4g.txt
performance_counter/: performance_counter.c  performance_counter.h
power/: power.c  power.h
serdes/: serdes.c  serdes.h
server/: server.c  server.h
shared_memory/: dummy_receiver.py  shared_memory.c  shared_memory.h
tasks/: tasks.h
temperature/: tempertature.c  tempertature.h
threads/: manager.c  manager.h  realtime_t.c  realtime_t.h  tick.c  tick.h
utils/: utils.c  utils.h
(+97 files in other folders)
